FLY wire David/force-app/main/default/objects/Opportunity_History2__c/Opportunity_History2__c.object-meta.xml
<CustomObject>
    <description>Custom object for Opportunity History from old system.</description>
    <label>Opportunity History</label>
    <nameField>
        <displayFormat>OH-{0000000}</displayFormat>
        <label>Opportunity History2 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>