FLY wire David/force-app/main/default/objects/Opportunity_History2__c/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <label>CreatedById</label>
    <length>18</length>
    <type>Text</type>
</CustomField>