FLY wire David/force-app/main/default/objects/Opportunity_History2__c/fields/ForecastCategory__c.field-meta.xml
<CustomField>
    <fullName>ForecastCategory__c</fullName>
    <label>ForecastCategory</label>
    <length>60</length>
    <type>Text</type>
</CustomField>