FLY wire David/force-app/main/default/objects/Opportunity_History2__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>