FLY wire David/force-app/main/default/objects/Opportunity_History2__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <label>StageName</label>
    <length>60</length>
    <type>Text</type>
</CustomField>